--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,7 @@ theme:
 docs_dir: docs
 nav:
   - Home: index.md
+  - start test: _index.md
   - General: general.md
   - Start: authentication.md
   - Getting Started: getting-started.md
